<resources>
    <string name="app_name">Del Campo Fresco</string>

    <!-- sign in -->
    <string name="signin">Sign In</string>
    <string name="register">Register</string>
    <string name="checkCredentials">Invalid Credentials</string>

    <!-- register account -->
    <string name="name">Name</string>
    <string name="lastname">Lastname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="telephone">Telephone</string>
    <string name="acceptPolicy">Accept Privacy Policy</string>
    <string name="openAccount">Create Account</string>
    <string name="checkPolicy">Please Accept Privacy Policy</string>
    <string name="userExists">User Already Exists!</string>
    <string name="enInvalid">Invalid\u0020</string>
    <string name="esInvalid"></string>
    <string name="createProfile">Profile Created</string>

    <!-- policy -->
    <string name="policyTitle">Privacy Policy</string>
    <string name="policyContent">
        By using our services, you entrust us with your data. We understand that it is a great responsibility and we do our best to protect your information and allow you to control it.\n\n
        The purpose of this Privacy Policy is to inform you about what data we collect, why we collect it and how you can update, manage, export and delete it.\n\n
        We collect information to provide the best services to all our users: from determining basic information, such as the language you speak, to more complex data, such as the ads that will be most useful to you, the people that interest you most online or the YouTube videos that you may like them. The type of information Google collects and how that information is used depends on how you use our services and how you manage privacy controls.\n\n
        If you are not logged into a Google account, we store the information we collect with unique identifiers linked to the browser, application or device you use. This allows us, for example, to keep your language preferences in all browsing sessions.\n\n
        If you are logged in, we also collect information that we store in your Google account and that we treat as personal information.
    </string>
    <string name="confirmPolicy">Accept</string>

    <!-- menu -->
    <string name="menuSearch">Search</string>
    <string name="menuSignOut">Sign Out</string>

    <!-- market -->
    <string name="welcome">Welcome</string>
    <string name="addItem">Add Items to Category</string>

    <string name="title_activity_vegetables">Vegetables</string>
    <string name="aguacate">Avocado</string>
    <string name="tomate">Tomato</string>
    <string name="pimenton">Pepper</string>
    <string name="lechuga">Lettuce</string>
    <string name="limon">Lemon</string>
    <string name="brocoli">Broccoli</string>

    <string name="title_activity_fruits">Fruits</string>
    <string name="fresa">Strawberry</string>
    <string name="mandarina">Tangerine</string>
    <string name="guayaba">Guaba</string>
    <string name="naranja">Orange</string>
    <string name="manzana">Apple</string>
    <string name="arandano">Blueberry</string>
    <string name="banano">Banana</string>
    <string name="papaya">Papaya</string>

    <!-- eliminar -->
    <string name="large_text">Material</string>
    <string name="action_settings">Settings</string>

</resources>